Possible #homephoto 100vh fix on mobile

--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -230,18 +230,18 @@ nav
   font-family: Hind
   background: url('../images/mountains-sky-bali-sunrise-kintamani-indonesia-webresize.jpg') no-repeat center fixed
   background-size: cover
-  height: 100vh
+  min-height: 100vh
   width: 100%
+  display: flex
 
   .gradientoverlay
     width: 100%
-    height: 100%
+    height: auto
     background: linear-gradient(115deg, rgba(0, 96, 255, .52), rgba(221, 35, 96, .52))
     text-align: center
     display: flex
     flex-direction: column
     justify-content: center
-    margin: 0 0 10px
 
     #intro
       margin: auto auto 0 auto
@@ -282,6 +282,7 @@ nav
       align-self: center
       margin-bottom: 25px
       margin-top: auto
+      padding-top: 20px
 
       a
         margin: 0 5px
